--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="C:/Users/lucas/eclipse-workspace/desafioPOO/lombok.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
